<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OfficeDictionary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_phrase">Create A Phrase</string>
    <string name="action_refresh_page">Refresh Page</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_section1">New/Trending</string>
    <string name="title_section2">Popular</string>
    <string name="title_section3">Upvoted</string>
    <string name="portrait_mode_text_view">In Portrait mode</string>


    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">The Office Lingo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log out of OfficeDictionary</string>
    <string name="post">Post</string>
    <string name="prompt_post">Phrase</string>
    <string name="prompt_usage">Usage</string>
    <string name="prompt_meaning">Meaning</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="progress_post">Posting&#8230;</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="character_count_placeholder">0/140</string>


</resources>
