<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PostActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="end" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/phrase_edittext"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_above="@+id/character_count_textview"
                android:background="@null"
                android:hint="@string/prompt_post"
                android:inputType="textMultiLine"
                android:gravity="top" >
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/phrase_usage_text"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_above="@+id/character_count_textview"
                android:background="@null"
                android:hint="@string/prompt_usage"
                android:inputType="textMultiLine"
                android:gravity="top" >
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/phrase_meaning_text"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_above="@+id/character_count_textview"
                android:background="@null"
                android:hint="@string/prompt_meaning"
                android:inputType="textMultiLine"
                android:gravity="top" >
                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:text="@string/post" />
            <TextView
                android:id="@+id/character_count_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_above="@id/post_button"
                android:text="@string/character_count_placeholder"
                android:textAppearance="?android:attr/textAppearanceSmall" />



        </LinearLayout>
    </ScrollView>

</RelativeLayout>